--- a/views/order.ejs
+++ b/views/order.ejs
@@ -61,7 +61,7 @@
                                 <b><div style="font-size: 15px"> <%= d.name%></div></b>
                                 <br>
                                 <br>
-                                ₹<%= d.price%>/pc.
+                                ₹<%= d.price%>/<%=d.per%>.
                             </div>
 
                             <div class="col-4 mx-auto">
