--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -1,52 +1,52 @@
 <html>
 
 <head>
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <style>
-    .edit{
-        width:50%;
-        margin-left:20%
-    }
+        .edit {
+            width: 50%;
+            margin-left: 20%
+        }
     </style>
 </head>
 
 <body>
-        <% include  partials/navbar%>
+    <% include  partials/navbar%>
 
-        <div class="edit">
-    <%if(edit==="category"){%>
-    <h4>Edit Category</h4>
-    <form class="form-group" action="/category/update" method="POST">
-        <label>Name</label>
-        <input class="form-control" name="name" value="<%=category.name%>">
-        <input hidden name="id" value="<%=category._id%>">
-        <button class="btn btn-primary" type="submit">Update</button>
-    </form>
-    <%}%>
+    <div class="edit">
+        <%if(edit==="category"){%>
+        <h4>Edit Category</h4>
+        <form class="form-group" action="/category/update" method="POST">
+            <label>Name</label>
+            <input class="form-control" name="name" value="<%=category.name%>">
+            <input hidden name="id" value="<%=category._id%>">
+            <button class="btn btn-primary" type="submit">Update</button>
+        </form>
+        <%}%>
     <%if(edit==="subcategory"){%>
-    <h4>Edit Sub-Category</h4>
-    <form class="form-group" action="/subcategory/update" method="POST">
-        <label>Name</label>
-        <input  class="form-control" name="name" value="<%=subcategory.name%>">
-        <input hidden name="id" value="<%=subcategory._id%>">
-        <button class="btn btn-primary" type="submit">Update</button>
+        <h4>Edit Sub-Category</h4>
+        <form class="form-group" action="/subcategory/update" method="POST">
+            <label>Name</label>
+            <input class="form-control" name="name" value="<%=subcategory.name%>">
+            <input hidden name="id" value="<%=subcategory._id%>">
+            <button class="btn btn-primary" type="submit">Update</button>
+        </form>
 
-    </form>
-
-    <%}%>
+        <%}%>
         <%if(edit==="product"){%>
-    <h4>Edit product</h4>
-    <form class="form-group" action="/product/update" method="POST">
-        <label>Name</label>
-        <input class="form-control" name="name" value="<%=product.name%>">
-        <input class="form-control" name="price" value="<%=product.price%>">
+        <h4>Edit product</h4>
+        <form class="form-group" action="/product/update" method="POST">
+            <label>Name</label>
+            <input class="form-control" name="name" value="<%=product.name%>" required>
+            <input class="form-control" name="price" value="<%=product.price%>" required>
+            Per<input class="form-control" name="per"  value="<%=product.per%>" required>
+ 
+            <input hidden name="id" value="<%=product._id%>">
+            <button class="btn btn-primary" type="submit">Update</button>
 
-        <input hidden name="id" value="<%=product._id%>">
-        <button class="btn btn-primary" type="submit">Update</button>
+        </form>
 
-    </form>
-
-    <%}%>
+        <%}%>
     </body>
 </html>
