--- a/views/order.ejs
+++ b/views/order.ejs
@@ -269,7 +269,7 @@
                 axios.post('/order/trans', sendData).then(res => {
                     console.log(res)
                     alert("order genrated")
-                    window.location.href = '/order/shopshow'
+                    window.location.href = '/order/make/5d5ae77e4b112e67bbbcb2f3'
                 })
             }
         }
