--- a/views/ordersView.ejs
+++ b/views/ordersView.ejs
@@ -23,6 +23,7 @@
                 <th scope="col">ID</th>
                 <th scope="col">Price</th>
                 <th scope="col">Date</th>
+                <th scope="col">Rating</th>
                 <th scope="col">Action</th>
             </tr>
         </thead>
@@ -37,6 +38,7 @@
                 <td><script>document.write(`<%=d.createdAt%>`.split('G')[0])</script></td>
                 <td><a href="/order/trans/delete/<%=d._id%>">delete</a></td>
                 <td><a href="/order/cancel/<%=d._id%>">cancel</a></td>
+                <td><%=d.rating%></td>
 
                 <td>
                     <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#A<%=d._id%>">
