--- a/views/partials/coustomerNav.ejs
+++ b/views/partials/coustomerNav.ejs
@@ -14,7 +14,7 @@
           <a class="nav-link" href="/bill/make">Sale <span class="sr-only">(current)</span></a>
         </li> -->
         <li class="nav-item active">
-          <a class="nav-link" href="/order/shopshow">Shops <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="/order/make/5d5ae77e4b112e67bbbcb2f3">Shops <span class="sr-only">(current)</span></a>
         </li>
         <!-- <li class="nav-item active">
             <a class="nav-link" href="/bill/trans">Transactions <span class="sr-only">(current)</span></a>
