--- a/views/partials/coustomerNav.ejs
+++ b/views/partials/coustomerNav.ejs
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light" style="background-color: red;">
+<nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #493f3f;">
     <a class="navbar-brand" href="#"><img src="/static/<%=profile.img%>" width="30px"><%=profile.name%></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -32,3 +32,8 @@
   
     </div>
   </nav> 
+  <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #493f3f;">
+      <a class="navbar-brand" href="#"> <%=profile.address%></a>
+    
+     
+    </nav> 
