--- a/views/login.ejs
+++ b/views/login.ejs
@@ -72,7 +72,7 @@
 			border-radius: 2px;
 			margin-bottom: 15px;
 			font-size: 13px;
-			background: #da1515;
+			background: #493f3f;
 			box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
 			padding: 30px;
 			position: relative;
