--- a/views/partials/coustomerNav.ejs
+++ b/views/partials/coustomerNav.ejs
@@ -1,5 +1,5 @@
-<nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #493f3f;">
-    <a class="navbar-brand" href="#"><img src="/static/<%=profile.img%>" width="30px"><%=profile.name%></a>
+<nav class="navbar navbar-expand-lg navbar-light" style="background-color: #d6c316;">
+    <a class="navbar-brand" href="#"><img src="/static/<%=profile.img%>" width="30px"><%=profile.name%><br> <%=profile.address%></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -14,7 +14,7 @@
           <a class="nav-link" href="/bill/make">Sale <span class="sr-only">(current)</span></a>
         </li> -->
         <li class="nav-item active">
-          <a class="nav-link" href="/order/make/5d5ae77e4b112e67bbbcb2f3">Shops <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="/order/make/5d5ae77e4b112e67bbbcb2f3">Order Now <span class="sr-only">(current)</span></a>
         </li>
         <!-- <li class="nav-item active">
             <a class="nav-link" href="/bill/trans">Transactions <span class="sr-only">(current)</span></a>
@@ -23,7 +23,7 @@
             <a class="nav-link" href="/order/trans/0">Track order <span class="sr-only">(current)</span></a>
           </li> -->
           <li class="nav-item active">
-              <a class="nav-link" href="/coustomer/orders">Orders <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="/coustomer/orders">My Orders <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item active">
                 <a class="nav-link" href="/coustomer/logout">Logout <span class="sr-only">(current)</span></a>
@@ -33,7 +33,7 @@
     </div>
   </nav> 
   <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #493f3f;">
-      <a class="navbar-brand" href="#"> <%=profile.address%></a>
+      <a class="navbar-brand" href="#"> </a>
     
      
     </nav> 
