--- a/views/coustomerOrders.ejs
+++ b/views/coustomerOrders.ejs
@@ -47,7 +47,7 @@
             <div class="modal-dialog" role="document">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                        <h5 class="modal-title" id="exampleModalLabel">Feedback</h5>
                         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                             <span aria-hidden="true">&times;</span>
                         </button>
@@ -55,12 +55,11 @@
                     <div class="modal-body">
 <pre>
 <input onclick="rate(`<%=d._id%>`,`<%=i%>`)" type="range" min="0" max="5" value="<%=d.rating%>" class="slider" id="myRange<%=i%>">
-0  1  2  3  4  5
+😩 0  1  2  3  4  5 😁
 </pre>
                     </div>
                     <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                        <button type="button" class="btn btn-primary">Save changes</button>
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Save   </button>
                     </div>
                 </div>
             </div>
