--- a/views/partialOrder.ejs
+++ b/views/partialOrder.ejs
@@ -60,7 +60,7 @@
                                 <b><div style="font-size: 15px"> <%= d.product.name%></div></b>
                                 <br>
                                 <br>
-                                ₹<%= d.product.price%>/pc.
+                                ₹<%= d.product.price%><br>/<%=d.per%>
                             </div>
 
                             <div class="col-4 mx-auto">
