--- a/views/order.ejs
+++ b/views/order.ejs
@@ -59,7 +59,7 @@
                                 </b>
                                 <br>
                                 <br>
-                                ₹<%= d.price%>/<%=d.per%>.
+                                ₹<%= d.price%><br>per <%=d.per%>.
                             </div>
 
                             <div class="col-4 mx-auto">
